spacing issue addressed

--- a/src/components/Team/Team.module.css
+++ b/src/components/Team/Team.module.css
@@ -12,3 +12,10 @@
     position: relative;
     bottom: 115px;
 }
+
+.horizontal_stack {
+  display: flex;
+  align-items: center; /* Aligns items vertically in the center */
+  justify-content: space-around;
+  flex-direction: row;
+}
